# vector_autoregression_AI4BP

./: .dockerignore  README.md
dashboard/: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
data/: beijing_air_quality_tiantan_daily_var.csv  get_data.py  get_data_2.py  var_fred_macro.csv
info/: VAR_INFO.md  VAR_ZUSAMMENFASSUNG.md
kurs_uebung/: README.md  VAR_Uebung.ipynb  VAR_Uebung_Loesung.ipynb  requirements.txt
